<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sopa_de_lletres"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="289dp"
        android:layout_height="159dp"
        android:contentDescription="@string/sopa_de_lletres"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/sopa" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/jugar"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/scoresButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/puntuacions"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/instructionsButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/instruccions"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>